--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity
-      android:label="@string/title_activity_draw_text"
-      android:name=".DrawText"
-      android:theme="@style/AppTheme.NoActionBar">
+    <activity android:name=".DrawText">
     </activity>
     <activity android:name=".QuestionActivity">
     </activity>
